--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack-hot-middleware": "^2.0.0"
   },
   "dependencies": {
+    "re-base": "^1.2.2",
     "react": "^0.14.0",
     "react-dom": "^0.14.0"
   }
